fixed modal experience on mobile devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -83,7 +83,7 @@
 // --------------------------------------------------------
 
 .form-entry {
-  @apply w-72
+  @apply w-64
   flex flex-col
   ml-auto mr-auto;
 }
